# apix

./: .gitignore  README.md  mypy.ini  pyproject.toml
apix/: __init__.py  dependant.py  encoder.py  endpoint.py  exceptions.py  params.py  service.py  utils.py
apix/dependencies/: models.py  utils.py
examples/: get.py  main.py
tests/: test_dependency.py
