[tool.poetry]
name = "apix"
version = "0.0.1"
description = "Typed HTTP client based on pydantic and httpx"
authors = ["lsongzhi <lsongzhi@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
httpx = "^0.12.1"
multidict = "^4.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
